Fix dialog sizing issues to get rid of second scrollbar

--- a/client/src/app/dialogs/post-editing-dialog/post-editing-dialog.component.scss
+++ b/client/src/app/dialogs/post-editing-dialog/post-editing-dialog.component.scss
@@ -1,5 +1,5 @@
 mat-dialog-content textarea {
-    width: 90%;
+    width: 100%;
 }
 
 .mat-form-field .mat-raised-button {
